      objects in lazy-load databases, if the \code{libdeflate} library
      and headers are available.  Typically tasks spend up to 5\% of
      their time on such operations, although creating lazy-data
      databases is one of the exceptions.

      \emph{pro tem} this can also be selected by setting environment
      variable \env{R_USE_LIBDEFLATE_FOR_LAZYLOAD} to \code{yes}.
    }
  }

  \subsection{INSTALLATION on macOS}{
    \itemize{
      \item (In progress)\cr
      A new \command{configure} option \option{--with-newAccelerate}
      makes use of Apple's \sQuote{new} BLAS / LAPACK interface in their
      Accelerate framework.  That interface is only available in macOS
      13.3 or later, and building requires SDK 14.3 or later (from the
      Command Line Tools or Xcode).

      To avoid many compilation warnings you may need to use
\preformatted{
	CC="clang -mmacos-version-min=13.3"
}

      That version of Accelerate provides LAPACK 3.9.1 rather than 3.2.1.

      Currently Accelerate is used for BLAS calls from C in R and package
      stats and for LAPACK calls from the \code{lapack} module.

      The BLAS entry points in libRblas.dylib are diverted to
      Accelerate: this means that calls to LAPACK routines from packages
      will go to the reference implementation and BLAS calls in that
      will use Accelerate.
    }
   }

  %% \subsection{PACKAGE INSTALLATION}{
  %%   \itemize{
  %%     \item .
  %%   }
  %% }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} notes when S4-style exports are used
      without declaring a strong dependence on package \pkg{methods}.

      \item \code{tools::checkRd()} (used by \command{R CMD check})
      detects more problems with \verb{\Sexpr}-based dynamic content,
      including bad nesting of \verb{\Sexpr}s and invalid arguments.

      \item \code{tools::checkRd()} now reports Rd titles and section
      names ending in a period; this is ignored by \command{R CMD check}